# XfinityDeviceUnpauser

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  initiate.bat  initiate.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  feature.md  optimization.md  security.md
.github/workflows/: enforce_standards.yml
src/: linux.sh  mac_changer.py  main.py  wireless.py
tests/: test_mac_changer.py  test_wireless.py
