[project]
name = "xfinitydeviceunpauser"
version = "0.1.0"
description = "A local MAC address changer"
authors = [
    {name = "Mason Root",email = "contact@masonroot.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyroute2 (>=0.9.4,<0.10.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "src"
addopts = [
    "--import-mode=importlib"
]
testpath = [
    "tests"
]